apps/mand/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mand
  namespace: default
spec:
  parentRefs:
    - kind: Gateway
      namespace: gateway-infra
      name: gateway
  hostnames:
    - wisv.ch
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /admin
        - path:
            type: PathPrefix
            value: /link/
      backendRefs:
        - name: mand-internal
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mand-external
          port: 80
